# slamcore-ros2-examples

./: .gitignore  .gitmodules  .markdown-link-check.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  Taskfile.dist.yaml  dependencies-create3.txt  dependencies-kobuki.txt  dependencies-turtlebot4.txt  pyproject.toml  repos-create3.yaml  repos-kobuki.yaml  repos.yaml
share/: add-groups.sh  check-groups.sh  combination_validity.py  entrypoint.sh  entrypoint.sh.in
src/slamcore_ros2_create3_example/: CMakeLists.txt  package.xml
src/slamcore_ros2_create3_example/config/: create3-nav2-demo-params.yaml  create3-slam-config.json
src/slamcore_ros2_create3_example/descriptions/: cam_mount_create3.urdf.xacro  slamcore-create3.urdf.xacro
src/slamcore_ros2_create3_example/launch/: create3_cmd_vel_mux_launch.py  create3_navigation_launch.py  create3_navigation_monitoring_launch.py  create3_slam_launch.py  create3_view_model_launch.py
src/slamcore_ros2_create3_example/meshes/: d435i_create3_tall_mount.stl  d435i_create3_tall_mount_LICENSE
src/slamcore_ros2_create3_example/python/scripts/: create3_teleop_key.py
src/slamcore_ros2_create3_example/rviz/: create3_navigation_monitoring.rviz
src/slamcore_ros2_examples/: CMakeLists.txt  package.xml  pyproject.toml
src/slamcore_ros2_examples/config/: nav2-demo-params.yaml  slam-config.json
src/slamcore_ros2_examples/descriptions/: _d435.urdf.xacro  plates.urdf.xacro  slamcore-kobuki.urdf.xacro
src/slamcore_ros2_examples/include/slamcore_ros2_examples/: kobuki_teleop_joy.hpp
src/slamcore_ros2_examples/launch/: kobuki_live_navigation_launch.py  kobuki_setup_comms_launch.py  navigation_monitoring_launch.py  static_transform_pub_launch.py  view_model_launch.py
src/slamcore_ros2_examples/python/scripts/: kobuki_teleop_key.py
src/slamcore_ros2_examples/python/slamcore_ros2_examples/: configuration.py  utils.py  xacro_file_contents.py
src/slamcore_ros2_examples/rviz/: default.rviz  model.rviz
src/slamcore_ros2_examples/src/: kobuki_teleop_joy.cpp
src/slamcore_ros2_examples_common/: CMakeLists.txt  package.xml
src/slamcore_ros2_examples_common/config/: dataset-recorder-odom-override.yaml  ps4-joy.yaml  slam-publisher-odom-override.yaml
src/slamcore_ros2_examples_common/descriptions/: _d435.urdf.xacro
src/slamcore_ros2_examples_common/launch/: navigation_monitoring_launch.py  static_transform_pub_launch.py  teleop_joy_launch.py  view_model_launch.py
src/slamcore_ros2_examples_common/python/scripts/: static_transform_publisher_from_file.py
src/slamcore_ros2_examples_common/python/slamcore_ros2_examples_common/: configuration.py  shortcuts.py  utils.py  xacro_file_contents.py
src/slamcore_ros2_examples_common/rviz/: default.rviz  model.rviz
src/slamcore_ros2_kobuki_example/: CMakeLists.txt  package.xml
src/slamcore_ros2_kobuki_example/config/: nav2-demo-params.yaml  slam-config.json
src/slamcore_ros2_kobuki_example/descriptions/: cam_mount_kobuki.urdf.xacro  plates.urdf.xacro  slamcore-kobuki.urdf.xacro
src/slamcore_ros2_kobuki_example/launch/: kobuki_live_navigation_launch.py  kobuki_setup_comms_launch.py  kobuki_view_model_launch.py
src/slamcore_ros2_kobuki_example/python/scripts/: kobuki_teleop_key.py
src/slamcore_ros2_kobuki_example/src/: kobuki_teleop_joy.cpp
src/slamcore_ros2_turtlebot4_example/: CMakeLists.txt  package.xml
src/slamcore_ros2_turtlebot4_example/config/: turtlebot4-cmd-vel-mux.yaml
src/slamcore_ros2_turtlebot4_example/config/lite/: turtlebot4-nav2-demo-params.yaml  turtlebot4-slam-config.json
src/slamcore_ros2_turtlebot4_example/config/standard/: turtlebot4-nav2-demo-params.yaml  turtlebot4-slam-config.json
src/slamcore_ros2_turtlebot4_example/descriptions/lite/: slamcore-turtlebot4.urdf.xacro
src/slamcore_ros2_turtlebot4_example/descriptions/standard/: slamcore-turtlebot4.urdf.xacro
src/slamcore_ros2_turtlebot4_example/launch/: turtlebot4_bringup_lite.launch.py  turtlebot4_bringup_standard.launch.py  turtlebot4_cmd_vel_mux_launch.py  turtlebot4_navigation_launch.py  turtlebot4_navigation_monitoring_launch.py  turtlebot4_robot_description_launch.py  turtlebot4_slam_launch.py  turtlebot4_teleop_joy_launch.py  turtlebot4_view_model_launch.py
src/slamcore_ros2_turtlebot4_example/rviz/: turtlebot4_navigation_monitoring.rviz
