<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamcore_ros2_examples</name>
  <version>0.1.0</version>
  <description>SLAMcore - ROS2 Integration Examples</description>
  <maintainer email="support@slamcore.com">SLAMcore Support</maintainer>
  <license>BSD-3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>kobuki_ros</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>navigation2</depend>
  <depend>nonpersistent_voxel_layer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
