<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamcore_ros2_turtlebot4_example</name>
  <version>0.1.0</version>
  <description>Slamcore - ROS2 Integration Example using a TurtleBot 4</description>
  <maintainer email="support@slamcore.com">Slamcore Support</maintainer>
  <license>BSD-3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>irobot_create_description</depend>
  <depend>irobot_create_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>navigation2</depend>
  <depend>nonpersistent_voxel_layer</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>slamcore_ros2_examples_common</depend>
  <depend>turtlebot4_bringup</depend>
  <depend>turtlebot4_description</depend>
  <depend>turtlebot4_diagnostics</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
